unpackaged/main/default/objects/clazar__Buyer__c/clazar__Buyer__c.object-meta.xml
<CustomObject>
    <label>Clazar Buyer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clazar Buyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>