unpackaged/main/default/objects/clazar__Buyer__c/fields/clazar__cloud_account_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__cloud_account_id__c</fullName>
    <label>Cloud Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>