unpackaged/main/default/objects/clazar__Buyer__c/fields/clazar__latest_contract_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__latest_contract_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Contract</label>
    <referenceTo>clazar__Contract__c</referenceTo>
    <relationshipName>Buyers</relationshipName>
    <type>Lookup</type>
</CustomField>