unpackaged/main/default/objects/clazar__Buyer__c/fields/clazar__registration_details__c.field-meta.xml
<CustomField>
    <fullName>clazar__registration_details__c</fullName>
    <label>Registration Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>