unpackaged/main/default/objects/clazar__Buyer__c/listViews/clazar__All.listView-meta.xml
<ListView>
    <fullName>clazar__All</fullName>
    <columns>NAME</columns>
    <columns>clazar__cloud__c</columns>
    <columns>clazar__domain__c</columns>
    <columns>clazar__status__c</columns>
    <columns>clazar__latest_contract_id__c</columns>
    <columns>clazar__listing_id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>