unpackaged/main/default/objects/clazar__Buyer__c/listViews/clazar__GCP_Marketplace_Buyers.listView-meta.xml
<ListView>
    <fullName>clazar__GCP_Marketplace_Buyers</fullName>
    <columns>NAME</columns>
    <columns>clazar__cloud__c</columns>
    <columns>clazar__domain__c</columns>
    <columns>clazar__status__c</columns>
    <columns>clazar__latest_contract_id__c</columns>
    <columns>clazar__listing_id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clazar__cloud__c</field>
        <operation>equals</operation>
        <value>gcp</value>
    </filters>
    <label>GCP Marketplace Buyers</label>
</ListView>